k8s/log-collector.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: microservices-log-collector
  namespace: microservices
  labels:
    app: microservices-log-collector
spec:
  selector:
    matchLabels:
      app: microservices-log-collector
  template:
    metadata:
      labels:
        app: microservices-log-collector
    spec:
      serviceAccountName: fluentd-service-account
      containers:
      - name: fluentd
        image: fluent/fluentd-kubernetes-daemonset:v1-debian-elasticsearch
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "200m"
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
        - name: fluentd-config
          mountPath: /fluentd/etc/fluentd.conf
          subPath: fluentd.conf
        - name: log-storage
          mountPath: /fluentd/log
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
      - name: fluentd-config
        configMap:
          name: fluentd-config
      - name: log-storage
        emptyDir: {}
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      - key: node-role.kubernetes.io/control-plane
        effect: NoSchedule
      nodeSelector:
        kubernetes.io/os: linux
